# OnDevice

./: README.md
AndroidStudioProjects/TEST_APP/: settings.gradle.kts
AndroidStudioProjects/TEST_APP/app/: build.gradle.kts
AndroidStudioProjects/TEST_APP/app/src/main/: AndroidManifest.xml
AndroidStudioProjects/TEST_APP/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidStudioProjects/TEST_APP/app/src/main/java/com/example/test_app/: MainActivity.kt
AndroidStudioProjects/TEST_APP/app/src/main/java/com/example/test_app/ui/theme/: Theme.kt
AndroidStudioProjects/TEST_APP/app/src/main/res/values/: themes.xml
AndroidStudioProjects/TEST_APP/gradle/wrapper/: gradle-wrapper.properties
